--- a/index.html
+++ b/index.html
@@ -5,25 +5,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/cabecalho.css">
+    <link rel="stylesheet" href="css/rodape.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Home</title>
 </head>
 
 <body>
     <!-- CABEÇALHO DA PÁGINA -->
     <header>
-        <nav>
+        <nav id="menu">
             <ul>
-                <li></li>
-                <li></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="overflow.html">Overflow</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- CORPO DA PÁGINA -->
-    <main></main>
+    <main>
+        <h1>Teste de algumas caixas</h1>
+
+        <div class="caixa_geral">
+            <div class="caixa1"></div>
+            <div class="caixa2"></div>
+            <div class="caixa3"></div>
+            <div class="caixa4"></div>
+            <div class="caixa5"></div>
+            <div class="caixa6"></div>
+            <div class="caixa7"></div>
+            <div class="caixa8"></div>
+            <div class="caixa9"></div>
+            
+            <div class="caixa10"></div>
+        </div>
+    </main>
 
     <!-- RODAPÉ DA PÁGINA -->
-    <foolter id="footer"></foolter>
+    <foolter id="footer">
+        <p>Desenvolvido por: Felipe Ozias</p>
+    </foolter>
 </body>
 
 </html>
