feat: new page borda

--- a/borda.html
+++ b/borda.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/cabecalho.css">
     <link rel="stylesheet" href="css/rodape.css">
-    <link rel="stylesheet" href="css/fundo.css">
-    <title>Home</title>
+    <link rel="stylesheet" href="css/borda.css">
+    <title>Bordas</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="overflow.html">Overflow</a></li>
-                <li><a href="fundo.html">Fundo</a>
+                <li><a href="fundo.html">Fundo</a></li>
                 <li><a href="borda.html">Borda</a></li>
             </ul>
         </nav>
@@ -26,91 +26,89 @@
 
     <!-- CORPO DA PÁGINA -->
     <main>
-        <h1>Cor de fundo das caixar</h1>
+        <h1><u>Tipos de bordas</u></h1>
 
         <div class="caixa_geral">
             <div>
                 <div class="caixa1"></div>
-                <p class="texto_caixa">1: blue</p>
+                <p class="texto_caixa">1: border-<strong>top</strong>: solid</p>
             </div>
             <div>
                 <div class="caixa2"></div>
-                <p class="texto_caixa">2: #0000ff80</p>
+                <p class="texto_caixa">2: border-<strong>right</strong>: solid</p>
             </div>
             <div>
                 <div class="caixa3"></div>
-                <p class="texto_caixa">3: linear-gradient</p>
+                <p class="texto_caixa">3: border-<strong>bottom</strong>: solid</p>
             </div>
             <div>
                 <div class="caixa4"></div>
-                <p class="texto_caixa">4: radial-gradient</p>
+                <p class="texto_caixa">4: border-<strong>left</strong>: solid</p>
             </div>
             <div>
                 <div class="caixa5"></div>
-                <p class="texto_caixa">5: Imagem</p>
+                <p class="texto_caixa">5: border: solid <strong>1px</strong></p>
             </div>
             <div>
                 <div class="caixa6"></div>
-                <p class="texto_caixa">6: no-repeat</p>
+                <p class="texto_caixa">6: border: solid <strong>5px</strong></p>
             </div>
             <div>
                 <div class="caixa7"></div>
-                <p class="texto_caixa">7: repeat-x</p>
+                <p class="texto_caixa">7: border: solid 5px <strong>red</strong></p>
             </div>
             <div>
                 <div class="caixa8"></div>
-                <p class="texto_caixa">8: repeat-y</p>
+                <p class="texto_caixa">8: <strong>red blue yellow green</strong></p>
             </div>
             <div>
                 <div class="caixa9"></div>
-                <p class="texto_caixa">9: repeat: space</p>
+                <p class="texto_caixa">9: border: red 6px <strong>dotted</strong></p>
             </div>
             <div>
                 <div class="caixa10"></div>
-                <p class="texto_caixa">10: repeat: round</p>
+                <p class="texto_caixa">10: border: red 6px <strong>dashed</strong></p>
             </div>
             <div>
                 <div class="caixa11"></div>
-                <p class="texto_caixa">11: repeat: initial</p>
+                <p class="texto_caixa">11: border: red 6px <strong>double</strong></p>
             </div>
             <div>
                 <div class="caixa12"></div>
-                <p class="texto_caixa">12: repeat: inherit</p>
+                <p class="texto_caixa">12: border: red 6px <strong>groove</strong></p>
             </div>
             <div>
                 <div class="caixa13"></div>
-                <p class="texto_caixa">13: space repeat</p>
+                <p class="texto_caixa">13: border: red 6px <strong>ridge</strong></p>
             </div>
             <div>
                 <div class="caixa14"></div>
-                <p class="texto_caixa">14: repeat space</p>
+                <p class="texto_caixa">14: border: red 6px <strong>inset</strong></p>
             </div>
             <div>
                 <div class="caixa15"></div>
-                <p class="texto_caixa">15: position: center</p>
+                <p class="texto_caixa">15: border: red 6px <strong>outset</strong></p>
             </div>
             <div>
                 <div class="caixa16"></div>
-                <p class="texto_caixa">16: position: left</p>
+                <p class="texto_caixa">16: border-radius: 30px;</p>
             </div>
             <div>
                 <div class="caixa17"></div>
-                <p class="texto_caixa">17: position: right</p>
+                <p class="texto_caixa">17: radius: 50%</p>
             </div>
             <div>
                 <div class="caixa18"></div>
-                <p class="texto_caixa">18: position: top</p>
+                <p class="texto_caixa">18: radius: 10px 20px</p>
             </div>
             <div>
                 <div class="caixa19"></div>
-                <p class="texto_caixa">19: position: bottom</p>
+                <p class="texto_caixa">19: radius: 10px 20px 30px</p>
             </div>
             <div>
                 <div class="caixa20"></div>
-                <p class="texto_caixa">20: left 25px top 50px</p>
+                <p class="texto_caixa">20: radius: 10px 20px 30px 40px</p>
             </div>
-
-        </div>
     </main>
 
     <!-- RODAPÉ DA PÁGINA -->
