--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="overflow.html">Overflow</a></li>
                 <li><a href="fundo.html">Fundo</a></li>
+                <li><a href="borda.html">Borda</a></li>
             </ul>
         </nav>
     </header>
