feat: new page foto

--- a/foto.html
+++ b/foto.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/cabecalho.css">
     <link rel="stylesheet" href="css/rodape.css">
-    <link rel="stylesheet" href="css/index.css">
-    <title>Home</title>
+    <link rel="stylesheet" href="css/foto.css">
+    <title>Foto</title>
 </head>
 
 <body>
@@ -27,26 +27,15 @@
 
     <!-- CORPO DA PÁGINA -->
     <main>
-        <h1>Teste de algumas caixas</h1>
-
-        <div class="caixa_geral">
-            <div class="caixa1"></div>
-            <div class="caixa2"></div>
-            <div class="caixa3"></div>
-            <div class="caixa4"></div>
-            <div class="caixa5"></div>
-            <div class="caixa6"></div>
-            <div class="caixa7"></div>
-            <div class="caixa8"></div>
-            <div class="caixa9"></div>
-            <div class="caixa10"></div>
-        </div>
+        <h1>Foto para perfio</h1>
+        <img src="img/minha_foto_150x150.jpg" alt="Minha foto de perfio">
     </main>
 
     <!-- RODAPÉ DA PÁGINA -->
     <foolter id="footer">
         <p>Desenvolvido por: Felipe Ozias</p>
     </foolter>
+
 </body>
 
 </html>
