--- a/borda.html
+++ b/borda.html
@@ -20,6 +20,7 @@
                 <li><a href="overflow.html">Overflow</a></li>
                 <li><a href="fundo.html">Fundo</a></li>
                 <li><a href="borda.html">Borda</a></li>
+                <li><a href="foto.html">Foto</a></li>
             </ul>
         </nav>
     </header>
