--- a/sobre.html
+++ b/sobre.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/cabecalho.css">
     <link rel="stylesheet" href="css/rodape.css">
-    <link rel="stylesheet" href="css/index.css">
-    <title>Home</title>
+    <link rel="stylesheet" href="css/sobre.css">
+    <title>Sobre</title>
 </head>
 
 <body>
@@ -28,26 +28,20 @@
 
     <!-- CORPO DA PÁGINA -->
     <main>
-        <h1>Teste de algumas caixas</h1>
+        <h1>Um pouco da minha história</h1>
+        <img id="minha_foto" src="img/minha_foto_150x150.jpg" alt="Minha foto">
 
-        <div class="caixa_geral">
-            <div class="caixa1"></div>
-            <div class="caixa2"></div>
-            <div class="caixa3"></div>
-            <div class="caixa4"></div>
-            <div class="caixa5"></div>
-            <div class="caixa6"></div>
-            <div class="caixa7"></div>
-            <div class="caixa8"></div>
-            <div class="caixa9"></div>
-            <div class="caixa10"></div>
-        </div>
+        <p>
+            Meu nome é <strong class="font20">Felipe Ozias de Oliveira</strong>, tenho 24 anos, moro na cidade de Mossoró/RN e sou estudante a desenvolvedor pelo projeto Alpha EdTech do Instituto Alpha Lumen. Sou de uma família simples e morei muitos anos com meus pais nas zonas rurais de uma cidade próxima, depois vim para Mossoró e fiz alguns cursos como o técnico em TI, entrei na graduação de agronomia, entre outros cursos e hoje faço parte desse maravilhoso projeto. Gosto muito de persistir nos meus objetivos e buscar conhecimentos bem mais além do que onde estou. Tecnologias despertam meu interesse e chamam minha atenção e me capacitar para desenvolve-las é uma dos meus melhores prazeres, principalmente utilizando a programação.
+        </p>
+
     </main>
 
     <!-- RODAPÉ DA PÁGINA -->
     <foolter id="footer">
         <p>Desenvolvido por: Felipe Ozias</p>
     </foolter>
+
 </body>
 
 </html>
