--- a/foto.html
+++ b/foto.html
@@ -21,6 +21,7 @@
                 <li><a href="fundo.html">Fundo</a></li>
                 <li><a href="borda.html">Borda</a></li>
                 <li><a href="foto.html">Foto</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
             </ul>
         </nav>
     </header>
