--- a/texto.html
+++ b/texto.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/cabecalho.css">
     <link rel="stylesheet" href="css/rodape.css">
-    <link rel="stylesheet" href="css/index.css">
-    <title>Home</title>
+    <link rel="stylesheet" href="css/texto.css">
+    <title>Direção de texto</title>
 </head>
 
 <body>
@@ -29,26 +29,17 @@
 
     <!-- CORPO DA PÁGINA -->
     <main>
-        <h1>Teste de algumas caixas</h1>
-
-        <div class="caixa_geral">
-            <div class="caixa1"></div>
-            <div class="caixa2"></div>
-            <div class="caixa3"></div>
-            <div class="caixa4"></div>
-            <div class="caixa5"></div>
-            <div class="caixa6"></div>
-            <div class="caixa7"></div>
-            <div class="caixa8"></div>
-            <div class="caixa9"></div>
-            <div class="caixa10"></div>
-        </div>
+        <h2 class="texto1">Texto <br> horizontal-tb</h2>
+        <h2 class="texto2">Texto <br> vertical-lr</h2>
+        <h2 class="texto3">Texto <br> vertical-rl</h2>
+        <h2 class="texto4">Texto <br> ertical-lr e upright</h2>
     </main>
 
     <!-- RODAPÉ DA PÁGINA -->
     <foolter id="footer">
         <p>Desenvolvido por: Felipe Ozias</p>
     </foolter>
+
 </body>
 
 </html>
