--- a/sobre.html
+++ b/sobre.html
@@ -22,6 +22,7 @@
                 <li><a href="borda.html">Borda</a></li>
                 <li><a href="foto.html">Foto</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="texto.html">Texto</a></li>
             </ul>
         </nav>
     </header>
