refactor: refactor page tema1

--- a/tema1.html
+++ b/tema1.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="css/cabecalho.css">
     <link rel="stylesheet" href="css/rodape.css">
     <link rel="stylesheet" href="css/tema1.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto+Slab&display=swap" rel="stylesheet">
+
     <title>Tema 1</title>
 </head>
 
@@ -34,26 +39,28 @@
 
         <article class="class_article">
             <br>
-            <p>O html 5 é a versão mais atual dessa linguagem de marcação de hiper textos. É fundametal ter o
+            <p id="apresentacao">O html 5 é a versão mais atual dessa linguagem de marcação de hiper textos. É fundametal ter o
                 conhecimento
                 das tags que podem ser utilizadas para desenvolvimento de qualquer página com otambém o conhecimento em
                 CSS 3 que através dele damos um bom visual à página.
             </p> <br>
 
             <section class="tag_section">
-                <p>A tag <strong class="strong_tag">&lsaquo; X &rsaquo;</strong> tem função de .
+                <p>A tag <strong class="strong_tag">&lsaquo; ul &rsaquo;</strong> e <strong class="strong_tag">&lsaquo;
+                        li &rsaquo;</strong> tem função de criar uma lista não ordenada.
                 </p>
                 <div class="utilizacao">
                     <h3>Exemplos de utilização:</h3>
                     <p class="p_codigo"><strong>Código:</strong></p>
-                    <img src="" alt="Exemplo">
+                    <img src="img/html_listas.png" alt="Exemplo">
                     <br>
                     <p style="color:crimson;"><Strong>Efeito visual:</Strong></p>
                     <ul id="ul">
-                        <li class="a">Primeiro link</li>
-                        <li class="a">Segundo link</li>
-                        <li class="a">Terceiro link</li>
-                        <li class="a">Quarto link</li>
+                        <li>Primeiro link</li>
+                        <li>Segundo link</li>
+                        <li>Terceiro link</li>
+                        <li>Quarto link</li>
+                        <li>Quinto link</li>
                     </ul>
                 </div>
             </section>
@@ -64,23 +71,20 @@
                 <div class="utilizacao">
                     <h3>Exemplos de utilização:</h3>
                     <p class="p_codigo"><strong>Código:</strong></p>
-                    <img src="" alt="Exemplo">
+                    <img src="img/html_de_links.png" alt="Exemplo">
+                    <img src="img/css_de_links.png" alt="Exemplo">
                     <br>
                     <p style="color:crimson;"><Strong>Efeito visual:</Strong></p>
+                    <ul id="ul">
+                        <li><a id="link" href="#">Link link</a></li>
+                        <li><a id="hover" href="#">Link hover</a></li>
+                        <li"><a id="active" href="#">Link active</a></li>
+                        <li><a id="visited" href="#">Lunk visited</a></li>
+                        <li><a id="focus" href="#">Link focus</a></li>
+                    </ul>
                 </div>
             </section>
 
-            <section class="tag_section">
-                <p>A tag <strong class="strong_tag">&lsaquo; X &rsaquo;</strong> tem função de .
-                </p>
-                <div class="utilizacao">
-                    <h3>Exemplos de utilização:</h3>
-                    <p class="p_codigo"><strong>Código:</strong></p>
-                    <img src="" alt="Exemplo">
-                    <br>
-                    <p style="color:crimson;"><Strong>Efeito visual:</Strong></p>
-                </div>
-            </section>
         </article>
 
     </main>
