feat: new  page cores

--- a/tema1.html
+++ b/tema1.html
@@ -39,7 +39,8 @@
 
         <article class="class_article">
             <br>
-            <p id="apresentacao">O html 5 é a versão mais atual dessa linguagem de marcação de hiper textos. É fundametal ter o
+            <p id="apresentacao">O html 5 é a versão mais atual dessa linguagem de marcação de hiper textos. É
+                fundametal ter o
                 conhecimento
                 das tags que podem ser utilizadas para desenvolvimento de qualquer página com otambém o conhecimento em
                 CSS 3 que através dele damos um bom visual à página.
@@ -79,8 +80,8 @@
                         <li><a id="link" href="#">Link link</a></li>
                         <li><a id="hover" href="#">Link hover</a></li>
                         <li"><a id="active" href="#">Link active</a></li>
-                        <li><a id="visited" href="#">Lunk visited</a></li>
-                        <li><a id="focus" href="#">Link focus</a></li>
+                            <li><a id="visited" href="#">Lunk visited</a></li>
+                            <li><a id="focus" href="#">Link focus</a></li>
                     </ul>
                 </div>
             </section>
